# NoShitSherlock

./: .env.example  AGENT_D_RESULTS.md  FIX_SUMMARY.md  README.md  env.example  env.local.example  mise.toml  pyproject.toml  test_claude_api.py  test_shallow_clone.py  vibe-kanban_feauture_intergrations_in_DevFlow.txt
.claude/commands/: commit.md  fix.md  update-app.md
docs/: CLI_MODE_GUIDE.md  VIBE-KANBAN-INTEGRATION-PLAN.md  blog-claude-subscription-integration.md
docs/devflow-reference/arch-docs/: APIs_prompt.md  APIs_result.md  DBs_prompt.md  DBs_result.md  DevFlow-arch.md  authentication_prompt.md  authentication_result.md  authorization_prompt.md  (+25 more)
docs/vibe-kanban-integration/: QUICKSTART.md  README.md  RESUME-GUIDE.md  hooks-guide.md  implementation-checklist.md  mcp-setup.md  skills-guide.md  troubleshooting.md  vibe-kanban-setup.md
scripts/: test_cli_mode.py
src/: client.py  health_check.py  investigate_worker.py  query_workflow_status.py  worker.py  workflow_config.py
src/activities/: dynamodb_health_check_activity.py  investigate_activities.py  investigation_cache.py  investigation_cache_activities.py
src/investigator/: activity_wrapper.py  example.py  example_private_repo.py  investigator.py
src/models/: __init__.py  activities.py  cache.py  investigation.py  workflows.py
src/utils/: dynamodb_client.py  prompt_context.py  prompt_context_base.py  prompt_context_dynamodb.py  prompt_context_file.py  storage_keys.py
src/workflows/: investigate_repos_workflow.py  investigate_single_repo_workflow.py
tests/unit/: test_claude_cli_integration.py
(+10 files in other folders)
