[project]
name = "repo-swarm"
version = "0.1.0"
description = "Repository analysis and investigation system using Claude and Temporal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.15.0",
    "anthropic>=0.18.0",
    "gitpython>=3.1.0",
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "moto[dynamodb]",
    "boto3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "moto[dynamodb]",
    "boto3",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PYI", "Q", "SIM", "TID", "ARG", "PLE", "PLW", "RUF"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0111", "C0103"]
